# playwright-playground

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer-start.sh  devcontainer.json  docker-compose.yaml
react/: BUILD.bazel  eslint.config.js  index.html  playwright.config.ts  tsconfig.json  vite.config.ts
react/src/: Editor.css  Editor.spec.tsx  Editor.tsx
